# task_rest

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  HOW_TO.md  LICENSE  README.md  TODO.md  _config.py  dgunicorn_conf.py  docker-compose.yml  docker_local_run.sh  flask_conf.bat  flask_conf.sh  flask_conf_h.sh  flask_conf_local.sh  flask_conf_z.sh  gunicorn.conf.py  gunicorn.local.conf.py  how_run.txt  main.py  pyproject.toml  pytest.ini  pytest_auth.ini  pytest_zero_auth.ini  requirements.txt  requirenments.txt  run.py  runs.bat  runs.sh  setup.py  start.sh  start_gun.sh  static.web  task_rest.komodoproject  test.py  test.txt  web.config  wsgi.py
docker/: docker-compose.yml  docker_gunicorn_conf.py
poly/: __init__.py  config.py  config_dev_instance.py  config_instance.py  task.py
poly/clinic/: __init__.py  models.py  views.py
poly/reestr/: __init__.py  common.py  task.py  views.py
poly/report/: __init__.py
poly/sprav/: __init__.py  views.py
poly/test/: __init__.py  task.py
poly/utils/: __init__.py  decorators.py  exept.py  fields.py  files.py  parse_jwt.py  sqlbase.py  test.py
static/: .gitignore
static/db_data/: errors_bars.sql
static/sql/: alter_cardz_clin.sql  alter_doctor.sql  alter_invoice_bars.sql  alter_talonz_clin_crd_num.sql  backup.txt  bak_weekly_del.ps1  cluster_sream.bat  current_data.txt  data.sql  dbname_dump.ps1  error_pack.sql  (+4 more)
tests/: conftest.py  test_apps.py  test_auth.py  test_bymonth.py  test_byusl.py  test_calc.py  test_create_tztbl.py  test_formos.py  test_imp_pmu.py  test_impex.py  test_mek.py  test_onyear.py  test_xml.py
(+102 files in other folders)
